--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "tzuchi-pharmacy-locator",
   "private": true,
@@ -12,14 +11,15 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "lucide-react": "^0.563.0",
+    "lucide-react": "^0.460.0",
     "@google/genai": "^1.38.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/node": "^22.10.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.0.0",
+    "typescript": "^5.7.2",
     "vite": "^6.0.0"
   }
 }
